[AM] Added htmlhint

--- a/code/server/templates/editProfile.html
+++ b/code/server/templates/editProfile.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>Edit Profile</title>
     <link rel="stylesheet" href="/code/server/styles/navStyle.css">
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -9,11 +11,11 @@
 <!-- Latest compiled JavaScript -->
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-<script> 
+<script>
     $(function(){
-      $("#includedContent").load("logedInNavBar.html"); 
+      $("#includedContent").load("logedInNavBar.html");
     });
-    </script>     
+    </script>
 </head>
     <body>
     <div id="includedContent"></div>
@@ -26,15 +28,15 @@
         <div class="text-center">
           <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
           <h6>Upload a different photo...</h6>
-          
+
           <input type="file" class="form-control">
         </div>
       </div>
-      
+
       <!-- edit form column -->
       <div class="col-md-9 personal-info">
         <h3>Personal info</h3>
-        
+
         <form class="form-horizontal" role="form">
           <div class="form-group">
             <label class="col-lg-3 control-label">First name:</label>
