--- a/code/server/templates/registration.html
+++ b/code/server/templates/registration.html
@@ -45,59 +45,59 @@
       // The start method will wait until the DOM is loaded.
       ui.start('#firebaseui-auth-container', uiConfig);
     </script>
-    <script> 
+    <script>
     $(function(){
-      $("#includedContent").load("index.html"); 
+      $("#includedContent").load("index.html");
     });
-    </script> 
+    </script>
 	</head>
   <body>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
        <div id="includedContent"></div>
-      <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
       <div class="row">
-<div class="col-sm-5">   
+<div class="col-sm-5">
 <div class="container-fluid">
-	 <form action="" method="" class="register-form"> 
+	 <form action="" method="" class="register-form">
          <label >REGISTER</label>
          <br>
-      <div class="row">      
+      <div class="row">
            <div class="col-md-4 col-sm-4 col-lg-4">
               <label for="firstName">Name</label>
-               <input name="firstName" class="form-control" type="text">    
-           </div>            
+               <input name="firstName" class="form-control" type="text">
+           </div>
       </div>
       <div class="row">
            <div class="col-md-4 col-sm-4 col-lg-4">
               <label for="email">Email</label>
-               <input name="email" class="form-control" type="email">             
-           </div>            
+               <input name="email" class="form-control" type="email">
+           </div>
       </div>
       <div class="row">
            <div class="col-md-4 col-sm-4 col-lg-4">
               <label for="password">Password</label>
-               <input name="password" class="form-control" type="password">             
-           </div>            
+               <input name="password" class="form-control" type="password">
+           </div>
       </div>
       <hr>
            <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
            <button class="btn btn-default regbutton">Sign Up</button>
-               
-      </div>    
+
+      </div>
     </form>
     </div>
       </div>
-<div class="col-sm-2" > 
+<div class="col-sm-2" >
     <div class="omb_login">
 		<div class="row omb_loginOr">
-			
+
 				<hr class="omb_hrOr">
 				<span class="omb_spanOr">or</span>
-			
+
  </div>
     </div>
           </div>
-<div class="col-sm-5"> 
+<div class="col-sm-5">
     <div class="signIn">
      <div id="firebaseui-auth-container"></div>
       </div>
