--- a/code/server/templates/teamPage.html
+++ b/code/server/templates/teamPage.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>GRN Fanzone</title>
       <link rel="stylesheet" href="/code/server/styles/carousel.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -9,11 +11,11 @@
 <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-<script> 
+<script>
     $(function(){
-      $("#includedContent").load("logedInNavBar.html"); 
+      $("#includedContent").load("logedInNavBar.html");
     });
-    </script>     
+    </script>
       <script>
           $(function() {
     $('#Carousel').carousel({
@@ -33,7 +35,7 @@
         <div class = "row">
         <div class="col-sm-6 text-left">
             <div class="col-md-6 text-left">
-            <img class="img-circle avatar avatar-original" style="-webkit-user-select:none; 
+            <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
               display:block; margin:auto;" src="http://robohash.org/sitsequiquia.png?size=120x120">
             </div>
             <div class="col-sm-6 text-left"></div>
@@ -44,16 +46,16 @@
             </div>
         <div class="col-sm-6 text-left">
              <div id="Carousel" class="carousel slide">
-                 
+
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#Carousel" data-slide-to="1"></li>
                     <li data-target="#Carousel" data-slide-to="2"></li>
                 </ol>
-                 
+
                 <!-- Carousel items -->
                 <div class="carousel-inner">
-                    
+
                 <div class="item active">
                 	<div class="row">
                         <div class="col-md-3"><a href="#" class="thumbnail"><div class="well">
@@ -70,7 +72,7 @@
                     </div></a></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><div class="well">
@@ -87,7 +89,7 @@
                     </div></a></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 </div><!--.carousel-inner-->
                   <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
                   <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
@@ -126,7 +128,7 @@
                 <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
                 <div class="form-group">
   <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <textarea class="form-control" rows="5" id="comment1"></textarea>
 </div>
             </div><br>
             </div>
@@ -146,17 +148,17 @@
 <div class="pad">
 <div class="container-fluid">
     <div class="col-md-12 lead"> Players</div>
-        <div id="Carousel" class="carousel slide">
-                 
+        <div id="Carousels" class="carousel slide">
+
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#Carousel" data-slide-to="1"></li>
                     <li data-target="#Carousel" data-slide-to="2"></li>
                 </ol>
-                 
+
                 <!-- Carousel items -->
                 <div class="carousel-inner">
-                    
+
                 <div class="item active">
                 	<div class="row">
                         <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a></div>
@@ -165,7 +167,7 @@
                 	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a></div>
@@ -183,17 +185,17 @@
         <div class="pad">
 <div class="container-fluid">
     <div class="col-md-12 lead"> Sponsors</div>
-        <div id="Carousel" class="carousel slide">
-                 
+        <div id="Carouseld" class="carousel slide">
+
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#Carousel" data-slide-to="1"></li>
                     <li data-target="#Carousel" data-slide-to="2"></li>
                 </ol>
-                 
+
                 <!-- Carousel items -->
                 <div class="carousel-inner">
-                    
+
                 <div class="item active">
                 	<div class="row">
                         <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a></div>
