--- a/code/server/templates/userProfile.html
+++ b/code/server/templates/userProfile.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>GRN Fanzone</title>
     <link rel="stylesheet" href="/code/server/styles/navStyle.css">
       <link rel="stylesheet" href="/code/server/styles/carousel.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -10,11 +12,11 @@
 <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-<script> 
+<script>
     $(function(){
-      $("#includedContent").load("logedInNavBar.html"); 
+      $("#includedContent").load("logedInNavBar.html");
     });
-    </script>     
+    </script>
       <script>
           $(function() {
     $('#Carousel').carousel({
@@ -36,7 +38,7 @@
           </div>
           <div class="row">
 			<div class="col-md-4 text-center">
-              <img class="img-circle avatar avatar-original" style="-webkit-user-select:none; 
+              <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
               display:block; margin:auto;" src="http://robohash.org/sitsequiquia.png?size=120x120">
             </div>
             <div class="col-md-8">
@@ -67,16 +69,16 @@
             <div class="row">
             <div class="col-md-12">
                 <div id="Carousel" class="carousel slide">
-                 
+
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#Carousel" data-slide-to="1"></li>
                     <li data-target="#Carousel" data-slide-to="2"></li>
                 </ol>
-                 
+
                 <!-- Carousel items -->
                 <div class="carousel-inner">
-                    
+
                 <div class="item active">
                 	<div class="row">
                         <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -85,7 +87,7 @@
                 	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -94,7 +96,7 @@
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -103,12 +105,12 @@
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 </div><!--.carousel-inner-->
                   <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
                   <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
                 </div><!--.Carousel-->
-                 
+
 		</div>
             </div>
             <hr>
@@ -117,17 +119,17 @@
             </div>
             <div class="row">
             <div class="col-md-12">
-                <div id="Carousel" class="carousel slide">
-                 
+                <div id="Carousels" class="carousel slide">
+
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#Carousel" data-slide-to="1"></li>
                     <li data-target="#Carousel" data-slide-to="2"></li>
                 </ol>
-                 
+
                 <!-- Carousel items -->
                 <div class="carousel-inner">
-                    
+
                 <div class="item active">
                 	<div class="row">
                 	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -136,7 +138,7 @@
                 	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -145,7 +147,7 @@
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 <div class="item">
                 	<div class="row">
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
@@ -154,12 +156,12 @@
                 		<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;"></a><button class = "btn btn-default pull-right" style="align:center"><i class="glyphicon glyphicon-remove-sign"></i> Unfollow </button></div>
                 	</div><!--.row-->
                 </div><!--.item-->
-                 
+
                 </div><!--.carousel-inner-->
                   <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
                   <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
                 </div><!--.Carousel-->
-                 
+
 		</div>
             </div>
         </div>
