--- a/code/server/templates/dashboard.html
+++ b/code/server/templates/dashboard.html
@@ -1,109 +1,115 @@
 <!DOCTYPE html>
 <!-- Latest compiled and minified CSS -->
 <html lang="en" ng-app="skeleton_app">
-  <head>
-<link rel="stylesheet" href="/code/server/styles/navStyle.css">
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<head>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="/code/server/styles/navStyle.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-<script> 
-    $(function(){
-      $("#includedContent").load("logedInNavBar.html"); 
-    });
-    </script>     
-<script>
-          $(function() {
-    $('#Carousel').carousel({
-        interval: 5000
-    })
-});
-      </script>
+    <script>
+        $(function() {
+            $("#includedContent").load("logedInNavBar.html");
+        });
+    </script>
+    <script>
+        $(function() {
+            $('#Carousel').carousel({
+                interval: 5000
+            })
+        });
+    </script>
 </head>
-    <body>
+
+<body>
     <div id="includedContent"></div>
-        <br>
-        <div style="text-align:center">
-            <h1>Dashboard</h1></div>
-        <hr><br>
+    <br>
+    <div style="text-align:center">
+        <h1>Dashboard</h1></div>
+    <hr><br>
     <div class="container-fluid">
-        <div class = "row">
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
-    </div>
+        <div class="row">
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Poster</div>
+                    <div class="panel-body">Post content</div>
+                </div>
                 <div class="row">
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-                <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
+                </div>
             </div>
-            </div>
-           
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
-    </div>
-            <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-            </div>
-        </div><hr>
-         </div>
-<div class="container-fluid">
-        <div class = "row">
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
-    </div>
-                <div class="row">
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-                <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
-            </div>
-            </div>
-           
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
-    </div>
-            <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-            </div>
-        </div><hr>
-         </div>
-<div class="container-fluid">
-        <div class = "row">
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
-    </div>
-                <div class="row">
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-                <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
-            </div>
-            </div>
-           
-        <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
-    </div>
-            <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
+
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Comments</div>
+                    <div class="panel-body">List of comments</div>
+                </div>
+                <div class="form-group">
+                    <label for="comment">Comment:</label>
+                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
             </div>
         </div>
-         </div>
-    </body>
+        <hr>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Poster</div>
+                    <div class="panel-body">Post content</div>
+                </div>
+                <div class="row">
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
+                </div>
+            </div>
+
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Comments</div>
+                    <div class="panel-body">List of comments</div>
+                </div>
+                <div class="form-group">
+                    <label for="comment">Comment:</label>
+                    <textarea class="form-control" rows="5" id="commentLeft"></textarea>
+                </div>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Poster</div>
+                    <div class="panel-body">Post content</div>
+                </div>
+                <div class="row">
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+                    <button class="btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
+                </div>
+            </div>
+
+            <div class="col-sm-6 text-left">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Comments</div>
+                    <div class="panel-body">List of comments</div>
+                </div>
+                <div class="form-group">
+                    <label for="comment">Comment:</label>
+                    <textarea class="form-control" rows="5" id="commentRight"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
