--- a/code/server/templates/navBar.html
+++ b/code/server/templates/navBar.html
@@ -21,7 +21,7 @@
 	background-color: white;
 	width: 3em;
 	text-align: center;
-}		
+}
     .Par{
         display: table-cell;
         vertical-align: middle;
@@ -29,7 +29,7 @@
         }
       </style>
 	</head>
-<body>    
+<body>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -67,7 +67,7 @@
                     <button type="submit" class="btn btn-default">Sign In</button>
         </div>
                     <div class="form-group">
-                    <Par> or </Par>
+                    <par> or </par>
                     </div>
         <div class="input-group">
                     <button class="btn btn-default">Register</button>
