[AM] Fixed CI issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-
+<!DOCTYPE html>
 
 <navbar></navbar>
 
 <div class="jumbotron">
   <div class="container">
-    
+
     <router-outlet></router-outlet>
-    
+
     <img *ngIf="photoURL" src="{{ photoURL }}" alt="">
 
 
@@ -20,7 +20,6 @@
       </div>
     </div>
 
-    
+
   </div>
 </div>
-
