--- a/src/app/navbar/navbar-component.css
+++ b/src/app/navbar/navbar-component.css
@@ -2,8 +2,69 @@
   float:right;
 }
 
-form{
+.form{
     overflow: auto;
     height: 50px;
     padding:5px 5px 0;
+}
+.user {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.two {
+  background-image: url('http://placehold.it/50x50');
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.sign-in {
+  max-width: 300px;
+  display: block;
+  margin: 0 auto;
+}
+
+.sign-in__heading {
+  margin-bottom: 36px;
+  font-size: 30px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.sign-in__button {
+  margin-bottom: 10px;
+  outline: none;
+  border: 1px solid #555;
+  padding: 0;
+  width: 100%;
+  height: 48px;
+  font-family: inherit;
+  font-size: rem(18px);
+  line-height: 48px;
+  color: #999;
+  background: transparent;
 }
