--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<html lang="en" ng-app="skeleton_app">
+  <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+</head>
+<body>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -12,23 +24,35 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li>{{ af.displayName }}</li>
-    </ul>
-    <div class="col-sm-3 col-md-3 pull-right">
-        <form class="navbar-form" role="search">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
+    <div class="row">
+        <div class="col-sm-2 col-md-2 pull-left">
+    <form class="navbar-form" role="search">
+    <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
+        <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
-        </form>
-
-
+    </div>
+    </form>
+  </div>
+    <div class="col-sm-2 col-md-2 pull-right">
+      <div class="container">
+        <div class="dropdown">
+          <span>{{ af.displayName }}</span>
+          <div class="dropdown-content">
+            <a routerLink="/profile">Profile</a>
+            <a routerLink="/dashboard">Dashboard</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+        <img  class="user" src="{{af.photoURL}}"
+        onError=""  alt="" />
+        <button #signIn class="btn btn-secondary" (click)="af.logout()">Logout</button>
+          </div>
     </div>
     <!--here should insert angular forms -->
+  </div>
   </div><!-- /.navbar-collapse -->
 </nav>
+</body>
+</html>
