Fixed html issues.

--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -9,9 +9,12 @@
 <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -24,8 +27,9 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2 col-md-2 pull-left">
+        <div class="pull-left col-sm-2">
     <form class="navbar-form" role="search">
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
@@ -35,7 +39,7 @@
     </div>
     </form>
   </div>
-    <div class="col-sm-2 col-md-2 pull-right">
+    <div class="pull-right col-sm-2">
       <div class="container">
         <div class="dropdown">
           <span>{{ af.displayName }}</span>
@@ -47,12 +51,14 @@
         </div>
         <img  class="user" src="{{af.photoURL}}"
         onError=""  alt="" />
-        <button #signIn class="btn btn-secondary" (click)="af.logout()">Logout</button>
+        <button type="button"#signIn class="btn btn-secondary" (click)="af.logout()">Logout</button>
           </div>
     </div>
     <!--here should insert angular forms -->
   </div>
+</div>
   </div><!-- /.navbar-collapse -->
+</div>
 </nav>
 </body>
 </html>
