--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
+</head>
+<body>
 <app-navbar></app-navbar>
 
 <div class="jumbotron">
@@ -11,3 +17,5 @@
 
   </div>
 </div>
+</body>
+</html>
