--- a/src/app/login/login-component.html
+++ b/src/app/login/login-component.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
+</head>
+<body>
 <div class="g-row sign-in">
   <div class="g-col">
     <h1 class="sign-in__heading">Sign in</h1>
@@ -7,3 +14,5 @@
     <button class="sign-in__button" (click)="af.login('google')" type="button">Google</button>
   </div>
 </div>
+</body>
+</html>
