--- a/src/app/profile/profile-component.html
+++ b/src/app/profile/profile-component.html
@@ -10,13 +10,8 @@
 <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-      <script>
-      $(function() {
-        $('#Carousel').carousel({
-          interval: 5000
-          })
-        });
-      </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
 </head>
     <body>
         <br>
@@ -81,8 +76,10 @@
                 </div>
             </div>
             <hr>
-            <div class="col-md-12 lead">Posts</div>
-            <div class="col-md-12">Pinned, favorited posts by teams/players? Don't remember if we had that</div>
+            <div class="row">
+              <div class="col-md-12 lead">Posts</div>
+            </div>
+            <div class="row">Pinned, favorited posts by teams/players? Don't remember if we had that</div>
             </div>
         </div>
       </div>
