--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>Navbar</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -51,7 +52,7 @@
         </div>
         <img  class="user" src="{{af.photoURL}}"
         onError=""  alt="" />
-        <button type="button"#signIn class="btn btn-secondary" (click)="af.logout()">Logout</button>
+        <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
           </div>
     </div>
     <!--here should insert angular forms -->
