--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -2,6 +2,7 @@
 <!-- Latest compiled and minified CSS -->
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>Dashboard</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -66,8 +67,8 @@
       <div class="panel-body">List of comments</div>
     </div>
             <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <label for="comment1">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment1"></textarea>
 </div>
             </div>
         </div><hr>
@@ -93,8 +94,8 @@
       <div class="panel-body">List of comments</div>
     </div>
             <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <label for="comment2">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment2"></textarea>
 </div>
             </div>
         </div>
