--- a/src/app/players-followed/players-followed.html
+++ b/src/app/players-followed/players-followed.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Players Followed</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
