--- a/src/app/profile/profile-component.html
+++ b/src/app/profile/profile-component.html
@@ -2,6 +2,7 @@
 <!-- Latest compiled and minified CSS -->
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title>User Profile</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
