Tried building templated with primeng. Issue with parsing json for data and html lint.

--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -3,13 +3,10 @@
 <html lang="en" ng-app="skeleton_app">
   <head>
     <title>Dashboard</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
@@ -19,12 +16,12 @@
         <div style="text-align:center">
             <h1>Dashboard</h1></div>
         <hr><br>
-    <div class="container-fluid">
+    <div class="container">
         <div class = "row">
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
+    <div class="card">
+      <div class="card-header">Poster</div>
+      <div class="card-block">Post content</div>
     </div>
                 <div class="row">
                   <div class="col-sm-12">
@@ -35,9 +32,9 @@
             </div>
 
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
+            <div class="card">
+      <div class="card-header">Comments</div>
+      <div class="card-block">List of comments</div>
     </div>
             <div class="form-group">
   <label for="comment">Comment:</label>
@@ -49,10 +46,10 @@
 <div class="container-fluid">
         <div class = "row">
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
-    </div>
+          <div class="card">
+            <div class="card-header">Poster</div>
+            <div class="card-block">Post content</div>
+          </div>
                 <div class="row">
                   <div class="col-sm-12">
             <button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
@@ -62,10 +59,10 @@
             </div>
 
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
-    </div>
+          <div class="card">
+    <div class="card-header">Comments</div>
+    <div class="card-block">List of comments</div>
+  </div>
             <div class="form-group">
   <label for="comment1">Comment:</label>
   <textarea class="form-control" rows="5" id="comment1"></textarea>
@@ -76,10 +73,10 @@
 <div class="container-fluid">
         <div class = "row">
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Poster</div>
-      <div class="panel-body">Post content</div>
-    </div>
+          <div class="card">
+            <div class="card-header">Poster</div>
+            <div class="card-block">Post content</div>
+          </div>
                 <div class="row">
                   <div class="col-sm-12">
             <button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
@@ -89,10 +86,10 @@
             </div>
 
         <div class="col-sm-6 text-left">
-            <div class="panel panel-default">
-      <div class="panel-heading">Comments</div>
-      <div class="panel-body">List of comments</div>
-    </div>
+          <div class="card">
+    <div class="card-header">Comments</div>
+    <div class="card-block">List of comments</div>
+  </div>
             <div class="form-group">
   <label for="comment2">Comment:</label>
   <textarea class="form-control" rows="5" id="comment2"></textarea>
