--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -2,64 +2,42 @@
 <html lang="en" ng-app="skeleton_app">
   <head>
     <title>Navbar</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">FanZone</a>
-  </div>
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <div class="container-fluid">
-    <div class="row">
-        <div class="pull-left col-sm-2">
-    <form class="navbar-form" role="search">
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
-        <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">FanZone</a>
+  <div class="collapse navbar-collapse" id="navbar">
+    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+      <li class="nav-item active">
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </form>
+      </li>
+    </ul>
+    <div class="pull-right">
+    <div class="container">
+      <div class="dropdown">
+        <span>{{ af.displayName }}</span>
+        <div class="dropdown-content">
+          <a routerLink="/profile">Profile</a>
+          <a routerLink="/dashboard">Dashboard</a>
+          <a href="#">Link 3</a>
         </div>
-    </div>
-    </form>
-  </div>
-    <div class="pull-right col-sm-2">
-      <div class="container">
-        <div class="dropdown">
-          <span>{{ af.displayName }}</span>
-          <div class="dropdown-content">
-            <a routerLink="/profile">Profile</a>
-            <a routerLink="/dashboard">Dashboard</a>
-            <a href="#">Link 3</a>
-          </div>
+      </div>
+      <img  class="user" src="{{af.photoURL}}"
+      onError=""  alt="" />
+      <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
         </div>
-        <img  class="user" src="{{af.photoURL}}"
-        onError=""  alt="" />
-        <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
-          </div>
-    </div>
-    <!--here should insert angular forms -->
+      </div>
   </div>
-</div>
-  </div><!-- /.navbar-collapse -->
-</div>
 </nav>
 </body>
 </html>
