--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,34 +5,30 @@
 //===================================================================*/
 
 .sign-in {
-  max-width: 300px;
   display: block;
   margin: 0 auto;
+  max-width: 300px;
 }
 
 .sign-in__heading {
-  margin-bottom: 36px;
   font-size: 30px;
   font-weight: 300;
+  margin-bottom: 36px;
   text-align: center;
 }
 
 .sign-in__button {
-  margin-bottom: 10px;
-  outline: none;
+  background: transparent;
   border: 1px solid #555;
+  color: #999;
+  font-family: inherit;
+  font-size: 18px;
+  height: 48px;
+  line-height: 48px;
+  margin-bottom: 10px;
   padding: 0;
   width: 100%;
-  height: 48px;
-  font-family: inherit;
-  font-size: rem(18px);
-  line-height: 48px;
-  color: #999;
-  background: transparent;
 }
-
-
-
 
 
 /*:hover {
@@ -40,5 +36,3 @@
     line-height: 46px;
     //border-color: #aaa;
   }*/
-
-
