--- a/src/app/login/login-component.css
+++ b/src/app/login/login-component.css
@@ -1,34 +1,31 @@
-
-
 /*//===================================================================
 //  SIGN-IN
 //===================================================================*/
 
 .sign-in {
-  max-width: 300px;
   display: block;
   margin: 0 auto;
+  max-width: 300px;
 }
 
 .sign-in__heading {
-  margin-bottom: 36px;
   font-size: 30px;
   font-weight: 300;
+  margin-bottom: 36px;
   text-align: center;
 }
 
 .sign-in__button {
-  margin-bottom: 10px;
-  outline: none;
+  background: transparent;
   border: 1px solid #555;
+  color: #999;
+  font-family: inherit;
+  font-size: 18px;
+  height: 48px;
+  line-height: 48px;
+  margin-bottom: 10px;
   padding: 0;
   width: 100%;
-  height: 48px;
-  font-family: inherit;
-  font-size: rem(18px);
-  line-height: 48px;
-  color: #999;
-  background: transparent;
 }
 
 
