--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -33,7 +33,7 @@
         <div class="pull-left col-sm-2">
     <form class="navbar-form" role="search">
     <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
+        <input type="text" class="form-control search-box" placeholder="Search" name="q">
         <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
