--- a/src/app/player-profile/player-component.html
+++ b/src/app/player-profile/player-component.html
@@ -58,7 +58,7 @@
                 <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
                 <div class="form-group">
   <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <textarea class="form-control" rows="5" id="comment1"></textarea>
 </div>
             </div><br>
             </div>
@@ -88,7 +88,7 @@
         <div class="list-group-item list-group-item-action"><h4>Sponsor 2</h4></div>
       </div>
     </div>
-    <h3><a routerLink='/club'> Go to club</a></h3>
+    <h3><a routerLink="/club"> Go to club</a></h3>
 </div>
 </div>
     </body>
