--- a/src/app/team-profile/team-component.html
+++ b/src/app/team-profile/team-component.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="skeleton_app">
   <head>
+    <title> Team Profile </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -66,7 +67,7 @@
                 <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
                 <div class="form-group">
   <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <textarea class="form-control" rows="5" id="comment1"></textarea>
 </div>
             </div><br>
             </div>
@@ -100,7 +101,7 @@
   <li class="list-group-item">Sponsor 3</li>
   <li class="list-group-item">Sponsor 4</li>
 </ul>
-<h3><a routerLink='/club'> Go to club</a></h3>
+<h3><a routerLink="/club"> Go to club</a></h3>
 </div>
     </body>
 </html>
