--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -32,12 +32,27 @@
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
       </div>
+    </form>
+        </div>
+        <div class="pull-right">
+    <div class="container">
+      <div class="dropdown">
+        <span>{{ af.displayName }}</span>
+        <div class="dropdown-content">
+          <a routerLink="/profile">Profile</a>
+          <a routerLink="/dashboard">Dashboard</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
       <img  class="user" src="{{af.photoURL}}"
       onError=""  alt="" />
       <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
         </div>
       </div>
+      </div>
   </div>
+</div>
+</div>
 </nav>
 </body>
 </html>
