[AM] Initial work on accessing user data in profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
     <router-outlet></router-outlet>
 
-    <img *ngIf="photoURL" src="{{ photoURL }}" alt="">
+    <img *ngIf="photoURL" src="{{ af.photoURL }}" alt="">
 
   </div>
 </div>
