--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -31,17 +31,17 @@
             <div class="row">
               <div class="col-md-4 text-center">
                 <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
-              display:block; margin:auto;" src="{{photoURL}}">
+              display:block; margin:auto;" src="{{profileData.photoURL}}">
               </div>
               <div class="col-md-8">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1 class="only-bottom-margin">{{displayName}} </h1>
+                    <h1 class="only-bottom-margin">{{profileData.displayName}} </h1>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <span class="text-muted">Email:</span> {{email}}<br>
+                    <span class="text-muted">Email:</span> {{profileData.email}}<br>
                   </div>
                 </div>
               </div>
