--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -43,16 +43,16 @@
     <div class="pull-right col-sm-2">
       <div class="container">
         <div class="dropdown">
-          <span>{{ af.displayName }}</span>
+          <span>{{ currentUser.displayName }}</span>
           <div class="dropdown-content">
-            <a routerLink="/profile">Profile</a>
+            <a routerLink="/profile/{currentUser.uid}">Profile</a>
             <a routerLink="/dashboard">Dashboard</a>
             <a href="#">Link 3</a>
           </div>
         </div>
-        <img  class="user" src="{{af.photoURL}}"
+        <img  class="user" src="{{currentUser.photoURL}}"
         onError=""  alt="" />
-        <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
+        <button type="button" class="btn btn-secondary" (click)="authService.logout()">Logout</button>
           </div>
     </div>
     <!--here should insert angular forms -->
