--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+{{profileData}}
   <br>
   <div class="container-fluid">
     <div class="row">
@@ -30,18 +31,21 @@
             </div>
             <div class="row">
               <div class="col-md-4 text-center">
+                <!--TODO Image is photourl-->
                 <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
-              display:block; margin:auto;" src="{{profileData.photoURL}}">
+              display:block; margin:auto;" src="">
               </div>
               <div class="col-md-8">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1 class="only-bottom-margin">{{profileData.displayName}} </h1>
+                    <!--TODO DISPLAYNAME GOES HERE-->
+                    <h1 class="only-bottom-margin"> DISPLAYNAME </h1>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <span class="text-muted">Email:</span> {{profileData.email}}<br>
+                    <!--TODO: Add email-->
+                    <span class="text-muted">Email:</span> EMAILGOESHERE <br>
                   </div>
                 </div>
               </div>
