--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -39,6 +39,7 @@
   </div>
     <div class="pull-right col-sm-2">
       <div class="container">
+        <div [hidden]="!af.registered">
         <div class="dropdown">
           <span>{{ af.displayName }}</span>
           <div class="dropdown-content">
@@ -50,6 +51,7 @@
         <img  class="user" src="{{af.photoURL}}"
         onError=""  alt="" />
         <button type="button" class="btn btn-secondary" (click)="af.logout()">Logout</button>
+      </div>
           </div>
     </div>
     <!--here should insert angular forms -->
