[AM] Fix dashboard link

--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -44,8 +44,7 @@
           <span>{{ currentUser.displayName }}</span>
           <div class="dropdown-content">
             <a routerLink="/user/{{currentUser.uid}}">Profile</a>
-            <a routerLink="/dashboard">Dashboard</a>
-            <a href="#">Link 3</a>
+            <a routerLink="/">Dashboard</a>
           </div>
         </div>
         <img  class="user" src="{{currentUser.photoURL}}"
