--- a/src/app/players-followed/players-followed.html
+++ b/src/app/players-followed/players-followed.html
@@ -7,10 +7,10 @@
     <p-header>
         <h3>List of Players</h3>
     </p-header>
-    <template let-car pTemplate="item">
+    <template let-player pTemplate="item">
         <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px;border-bottom:1px solid #D5D5D5;">
             <div class="ui-grid-row">
-                <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-search" (click)="selectPlayer(player)" style="cursor:pointer;float:left;margin-top:40px"></i><img src="{{player.avatar}}"></div>
+                <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-search" (click)="selectPlayer( player.id )" style="cursor:pointer;float:left;margin-top:40px"></i><img src="{{player.avatar}}"></div>
                 <div class="ui-grid-col-9">
                     <div class="ui-grid ui-grid-responsive ui-fluid">
                         <div class="ui-grid-row">
