--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -30,21 +30,18 @@
             </div>
             <div class="row">
               <div class="col-md-4 text-center">
-                <!--TODO Image is photourl-->
                 <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
               display:block; margin:auto;" src="{{(profileData | async)?.avatar}}">
               </div>
               <div class="col-md-8">
                 <div class="row">
                   <div class="col-md-12">
-                    <!--TODO DISPLAYNAME GOES HERE-->
                     <h1 class="only-bottom-margin"> {{(profileData | async)?.name}} </h1>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <!--TODO: Add email-->
-                    <span class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
+                    <span *ngIf="(profileData | async)?.email" class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
                   </div>
                 </div>
               </div>
