--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -26,22 +26,20 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
+							<button type="button" class = "btn btn-default pull-right" style="text-align:center" (click)="setComment(post.id)"><i class="glyphicon glyphicon-share-alt"></i></button>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 text-left">
 					<div class="card">
 						<div class="card-header">Comments</div>
-							<div *ngFor="let comment of post.comments">
 							<div class="card-block" >
-							{{comment}}</div>
-							</div>
+							TODO</div>
 
 					</div>
 					<div class="form-group">
 						<label for="comment">Comment:</label>
-						<textarea class="form-control" rows="5" id="comment"></textarea>
+						<textarea class="form-control" rows="5" id="comment" [(ngModel)]="curComment"></textarea>
 					</div>
 				</div>
 			</div><hr>
