--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -26,7 +26,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-							<button type="button" class = "btn btn-default pull-right" style="text-align:center" (click)="setComment(post.id)"><i class="glyphicon glyphicon-share-alt"></i></button>
+							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
 						</div>
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 					</div>
 					<div class="form-group">
 						<label for="comment">Comment:</label>
-						<textarea class="form-control" rows="5" id="comment" [(ngModel)]="curComment"></textarea>
+						<textarea class="form-control" rows="5" id="comment" ></textarea>
 					</div>
 				</div>
 			</div><hr>
