--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -15,7 +15,7 @@
   <div class="container-fluid">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -25,20 +25,12 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <div class="container-fluid">
-    <div class="row">
-        <div class="pull-left col-sm-2">
-    <form class="navbar-form" role="search">
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
-        <div class="input-group-btn">
+    <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box"></div>
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-        </div>
-    </div>
     </form>
-  </div>
-    <div class="pull-right col-sm-2">
-      <div class="container">
+    <div class="nav navbar-nav navbar-right">
         <div [hidden]="!authService.registered">
         <div class="dropdown">
           <span>{{ currentUser.displayName }}</span>
@@ -50,14 +42,12 @@
         <img  class="user" src="{{currentUser.photoURL}}"
         onError=""  alt="" />
         <button type="button" class="btn btn-secondary" (click)="authService.logout()">Logout</button>
+
       </div>
-          </div>
-    </div>
+      </div>
     <!--here should insert angular forms -->
-  </div>
 </div>
   </div><!-- /.navbar-collapse -->
-</div>
 </nav>
 </body>
 </html>
