--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -24,11 +24,7 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <form class="navbar-form navbar-left" role="search">
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search" name="q" id="search-box"></div>
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-    </form>
+        <search></search>
     <div class="nav navbar-nav navbar-right">
         <div [hidden]="!authService.registered">
         <div class="dropdown">
