works fine now hopefully

--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -36,6 +36,7 @@
           <div class="dropdown-content">
             <a routerLink="/user/{{currentUser.uid}}">Profile</a>
             <a routerLink="/">Dashboard</a>
+            <a routerLink="/list">List</a>
           </div>
         </div>
         <img  class="user" src="{{currentUser.photoURL}}"
