some more fixes

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -18,7 +18,7 @@
 			<div class="col-md-4">
 				<div class="list-group">
 				<a class="list-group-item active lead text-center">Clubs</a>
-				<a (click)="sendToPlayer(club.id)" class="list-group-item list-group-item-action" *ngFor="let club of clubs | async">
+				<a class="list-group-item list-group-item-action" *ngFor="let club of clubs | async">
 					{{club.name}}
 				</a>
 				</div>
@@ -26,7 +26,7 @@
 			<div class="col-md-4">
 				<div class="list-group">
 				<a class="list-group-item active lead text-center">Teams</a>
-				<a (click)="sendToPlayer(team.id)" class="list-group-item list-group-item-action" *ngFor="let team of teams | async">
+				<a class="list-group-item list-group-item-action" *ngFor="let team of teams | async">
 					{{team.name}}
 				</a>
 				</div>
@@ -34,7 +34,7 @@
 			<div class="col-md-4">
 				<div class="list-group">
 				<a class="list-group-item active lead text-center">Players</a>
-				<a (click)="sendToPlayer(player.id)" class="list-group-item list-group-item-action" *ngFor="let player of players | async">
+				<a class="list-group-item list-group-item-action" *ngFor="let player of players | async">
 					{{player.first_name + " " + player.last_name}}
 				</a>
 				</div>
